2006-04-13  Piotr Fusik  <fox@scene.pl>
* TODO: updated

* win32/Makefile: distribute TODO with binary releases


2006-01-31  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, win32/foobar2000/foo_asap.cpp, xmms/libasap.c:
  ASAP_IsOurFile() - as an intended side-effect, the XMMS plugin supports TM8

* asap.h, asap2wav.c, win32/wasap.c, win32/winamp/in_asap.c,
  win32/foobar2000/foo_asap.cpp, xmms/libasap.c: ASAP_MODULE_MAX

* win32/wasap.c: middle-click opens subsong menu

* xmms/libasap.map, Makefile.in: added linker script to strip dynamic symbols

* xmms/libasap.c: use open/read/close (#define USE_STDIO to get
  fopen/fread/fclose back); prefixed function names with "asap_" to prevent
  collision with system pause()


** 0.2.1 released on 2006-01-28

2006-01-27  Piotr Fusik  <fox@scene.pl>
* configure.ac, Makefile.in: use ./install-sh because it can create missing
  directories

* Makefile.in: avoid $^ which is not supported by PMake ("make" on *BSD)

* configure.ac, win32/Makefile, win32/wasap.rc: version 0.2.1

* win32/foobar2000/foo_asap.cpp, win32/foobar2000/README, win32/Makefile:
  foobar2000 plugin now supports subsongs


2006-01-24  Piotr Fusik  <fox@scene.pl>
* players/tm2.asx, asap.c, asap.h, asap2wav.c, Makefile.in, win32/wasap.c,
  win32/Makefile, win32/foobar2000/foo_asap.cpp, win32/winamp/in_asap.c,
  xmms/libasap.c: TM2 (Theta Music Composer 2.x) input format


2006-01-20  Piotr Fusik  <fox@scene.pl>
* xmms/libasap.c, win32/winamp/in_asap.c: forward declarations of "static"
  variables should use "static" and not "extern" - this fixes the GCC 4
  compilation error


** 0.2.0 released on 2006-01-15

2006-01-15  Piotr Fusik  <fox@scene.pl>
* asap.c: support for subsongs in RMT files

* configure.ac, Makefile.in: improved XMMS plugin compilation and installation


2006-01-14  Piotr Fusik  <fox@scene.pl>
* asap.c: some SAPs are self-extracting and their initialization (which
  includes decompression) takes more than 5 Atari frames which was