@@ -8,8 +8,10 @@
 #define IDM_QUALITY_MB1  204
 #define IDM_QUALITY_MB2  205
 #define IDM_QUALITY_MB3  206
-#define IDM_ABOUT        207
-#define IDM_EXIT         208
+#define IDM_44100_HZ     207
+#define IDM_48000_HZ     208
 #define IDM_8BIT         209
 #define IDM_16BIT        210
+#define IDM_ABOUT        211
+#define IDM_EXIT         212
 #define IDM_SONG1        251
