@@ -17,6 +17,9 @@ BEGIN
 			MENUITEM "MB 2", IDM_QUALITY_MB2
 			MENUITEM "MB 3", IDM_QUALITY_MB3
 			MENUITEM SEPARATOR
+			MENUITEM "44100 Hz", IDM_44100_HZ
+			MENUITEM "48000 Hz", IDM_48000_HZ
+			MENUITEM SEPARATOR
 			MENUITEM "8-bit", IDM_8BIT
 			MENUITEM "16-bit", IDM_16BIT
 		END
